; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_gx_video.c_gxSetScreen.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_gx_video.c_gxSetScreen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xfb = common dso_local global i32* null, align 8
@whichfb = common dso_local global i64 0, align 8
@GX_FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gxSetScreen() #0 {
  %1 = call i32 (...) @GX_DrawDone()
  %2 = load i32*, i32** @xfb, align 8
  %3 = load i64, i64* @whichfb, align 8
  %4 = getelementptr inbounds i32, i32* %2, i64 %3
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @GX_FALSE, align 4
  %7 = call i32 @GX_CopyDisp(i32 %5, i32 %6)
  %8 = call i32 (...) @GX_Flush()
  %9 = load i32*, i32** @xfb, align 8
  %10 = load i64, i64* @whichfb, align 8
  %11 = getelementptr inbounds i32, i32* %9, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @VIDEO_SetNextFramebuffer(i32 %12)
  %14 = call i32 (...) @VIDEO_Flush()
  %15 = call i32 (...) @VIDEO_WaitVSync()
  %16 = call i32 (...) @gx_input_UpdateMenu()
  ret void
}

declare dso_local i32 @GX_DrawDone(...) #1

declare dso_local i32 @GX_CopyDisp(i32, i32) #1

declare dso_local i32 @GX_Flush(...) #1

declare dso_local i32 @VIDEO_SetNextFramebuffer(i32) #1

declare dso_local i32 @VIDEO_Flush(...) #1

declare dso_local i32 @VIDEO_WaitVSync(...) #1

declare dso_local i32 @gx_input_UpdateMenu(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
